5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3991/executions/1573_1327.log
== TEST (2019-03-12 16:23:50) 
-- CODE:
var1 = 90
var2 = x
var3 = 55
print(var1 - var3 = var2)

-- ERROR:
File "XXXX", line 4
    print(var1 - var3 = var2)
         ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 16:26:19) 
-- CODE:
var1 = 90
var2 = x
var3 = 55
print(var1 — var3 = var2)

-- ERROR:
File "XXXX", line 4
    print(var1 — var3 = var2)
               ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 16:27:46) 
-- CODE:
var1 = 90
var2 = x
var3 = 55
print(var1 - var3 = var2)

-- ERROR:
File "XXXX", line 4
    print(var1 - var3 = var2)
         ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 16:28:07) 
-- CODE:
var1 = 90
var2 = 45
var3 = 55
print(var1 - var3 = var2)

-- ERROR:
File "XXXX", line 4
    print(var1 - var3 = var2)
         ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 16:29:52) 
-- CODE:
var1 = 90
var2 = 45
var3 = 55
print(var1 _ var3 = var2)

-- ERROR:
File "XXXX", line 4
    print(var1 _ var3 = var2)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 16:30:26) 
-- CODE:
var1 = 90
var2 = 45
var3 = 55
print(var1 ¬ var3 = var2)

-- ERROR:
File "XXXX", line 4
    print(var1 ¬ var3 = var2)
               ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 16:30:38) 
-- CODE:
var1 = 90
var2 = 45
var3 = 55
print(var1 / var3 = var2)

-- ERROR:
File "XXXX", line 4
    print(var1 / var3 = var2)
         ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 16:31:07) 
-- CODE:
var1 = 90
var2 = 45
var3 = 55
print(var1 / var3 = var2)

-- ERROR:
File "XXXX", line 4
    print(var1 / var3 = var2)
         ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 16:31:25) 
-- CODE:
var1 = 90
var2 = 45
var3 = 55
print(var1 / var3 = var2)

-- ERROR:
File "XXXX", line 4
    print(var1 / var3 = var2)
         ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 16:35:50) 
-- CODE:
var1 = 90
var2 = 45
var3 = 55
print(var1-var3 = var2)

-- ERROR:
File "XXXX", line 4
    print(var1-var3 = var2)
         ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 16:37:05) 
-- CODE:
var1 = 55
var2 = 45
var3 = 90
print(var3 - var1 = )


-- ERROR:
File "XXXX", line 4
    print(var3 - var1 = )
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 16:37:25) 
-- CODE:
var1 = 55
var2 = 45
var3 = 90
print(var3 - var1 = var2)


-- ERROR:
File "XXXX", line 4
    print(var3 - var1 = var2)
         ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:16:26) 
-- CODE:
var1 = 55
var2 = 45
var3 = 90
print(var3 - var1 = var2)


-- ERROR:
File "XXXX", line 4
    print(var3 - var1 = var2)
         ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 14:58:13) 
-- CODE:
divida = 90
print(divida)
H = 55	
print(H)
F = x
print(F)
divida - H = F


-- ERROR:
File "XXXX", line 7
    divida - H = F
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 14:58:58) 
-- CODE:
divida = 90
print(divida)
H = 55	
print(H)
F = 45
print(F)
divida - H = F


-- ERROR:
File "XXXX", line 7
    divida - H = F
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 14:59:07) 
-- CODE:
divida = 90
print(divida)
H = 55	
print(H)
F = 45
print(F)
divida - H == F


-- OUTPUT:
90
55
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 14:59:16) 
-- CODE:
divida = 90
print(divida)
H = 55	
print(H)
F = 45
print(F)
divida - H == F


-- EXECUTION TIME:
0.16833
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
90
55
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 15:00:13) 
-- CODE:
divida = 90
print(divida)
H = 55	
print(H)
F = 45
print(F)

-- OUTPUT:
90
55
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 15:00:44) 
-- CODE:
D = 90
print(divida)
H = 55	
print(H)
F = 45
print(F)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(divida)
NameError: name 'divida' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 15:01:01) 
-- CODE:
D = 90
print(D)
H = 55	
print(H)
F = 45
print(F)

-- OUTPUT:
90
55
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 15:02:17) 
-- CODE:
D = 90
print(D)
H = 55	
print(H)
print(D - H)
-- OUTPUT:
90
55
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 15:02:59) 
-- CODE:
D = 90
print(D)
H = 55	
print(H)
F = x
print(F)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    F = x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 15:03:56) 
-- CODE:
D = 90
print(D)
H = 55	
print(H)
F = ?
print(F)
-- ERROR:
File "XXXX", line 5
    F = ?
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 15:04:13) 
-- CODE:
D = 90
print(D)
H = 55	
print(H)
F = 35
print(F)
-- OUTPUT:
90
55
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 15:04:33) 
-- CODE:
D = 90
print(D)
H = 55	
print(H)
F = 35
print(F)
print(D == H - F)
-- OUTPUT:
90
55
35
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 15:05:06) 
-- CODE:
D = 90
print(D)
H = 55	
print(H)
F = 35
print(F)
print(D == H + F)
-- OUTPUT:
90
55
35
True
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 15:05:33) 
-- CODE:
D = 90
print(D)
H = 55	
print(H)
F = 35
print(F)
print(F == D - H)
-- OUTPUT:
90
55
35
True
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 15:05:41) 
-- CODE:
D = 90
print(D)
H = 55	
print(H)
F = 35
print(F)
print(F == D - H)
-- EXECUTION TIME:
0.155681
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
90
55
35
True
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 15:05:47) 
-- CODE:
D = 90
print(D)
H = 55	
print(H)
F = 35
print(F)
print(F = D - H)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(F = D - H)
TypeError: 'F' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 15:06:33) 
-- CODE:
D = 90
print(D)
H = 55	
print(H)
F = 35
print(F)
print(D - H = F)
-- ERROR:
File "XXXX", line 7
    print(D - H = F)
         ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 15:07:48) 
-- CODE:
divida = 0
print(divida)
-- ERROR:
File "XXXX", line 7
    print(D - H = F)
         ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 15:08:20) 
-- CODE:
divida = 0
print(divida)
compra = 90
print(compra)

-- OUTPUT:
0
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 15:09:23) 
-- CODE:
divida = 0
print(divida)
compra = 90
print(compra)
print(divida + compra)
-- OUTPUT:
0
90
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 15:11:41) 
-- CODE:
heraclito + fredegunda = 90
print(heraclito + fredegunda)
-- ERROR:
File "XXXX", line 1
    heraclito + fredegunda = 90
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 15:13:11) 
-- CODE:
H = 55
print(H)
F = 35
print(F)
T = 90
print(T)
-- OUTPUT:
55
35
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 15:13:46) 
-- CODE:
H = 55
print(H)
F = 35
print(F)
T = 90
print(T)
print(T - H)
-- OUTPUT:
55
35
90
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 15:14:09) 
-- CODE:
H = 55
print(H)
F = 35
print(F)
T = 90
print(T)
print(T - H)
-- OUTPUT:
55
35
90
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 15:14:27) 
-- CODE:
H = 55
print(H)
F = 35
print(F)
T = 90
print(T)
print(T - H)
-- EXECUTION TIME:
0.174951
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
55
35
90
35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 15:14:44) 
-- CODE:
H = 55
print(H)
F = 35
print(F)
T = 90
print(T)
print(T - H == F)
-- OUTPUT:
55
35
90
True
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 15:14:53) 
-- CODE:
H = 55
print(H)
F = 35
print(F)
T = 90
print(T)
print(T - H == F)
-- EXECUTION TIME:
0.14003
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
55
35
90
True
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 15:15:03) 
-- CODE:
H = 55
print(H)
F = 35
print(F)
T = 90
print(T)
print(T - H = F)
-- ERROR:
File "XXXX", line 7
    print(T - H = F)
         ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
